Fix example border not showing up on iOS
Due to the proportional scaling, the border would become less than 1px on smaller viewports, and therefore not render on certain devices.

The border now uses px instead of rem to enforce the unit at all sizes.

Update the stylelint config to allow the use of px globally, while restricting the use of px on certain properties to enforce proportional scaling.

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,7 +27,7 @@
 }
 
 .Pages-example {
-  box-shadow: inset 0 0 0 0.0625rem gainsboro;
+  outline: 1px solid gainsboro;
   margin-top: 1rem;
   max-width: 25rem;
   padding: 1rem;
